<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rclcpp_async</name>
  <version>0.1.0</version>
  <description>ROS2 C++20 coroutine library for async/await style programming</description>
  <maintainer email="nishino@todo.todo">nishino</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>example_interfaces</test_depend>
  <test_depend>ros2launch</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
